# OCR-ROA

./: .env.example  .gitignore  CHANGELOG.md  CONTRATO.md  Dockerfile  LICENSE  MANIFEST.in  README.md  ROADMAP.md  analisis_profundo.py  analizar_exports.py  config.py  docker-compose.yml  mcp.json  pyproject.toml  register_com_and_cli.bat  requirements.txt  roa-ocr.bat  roa_ocr.py  start.bat  test_e2e_quality.py  test_image_to_text_eval.py
.github/workflows/: ci.yml  publish.yml
ER296/: .tmp_test.py  ARQUITECTURA_ER296.md  GUIA_INTEGRACION_ER296.md  INTEGRACION_ER296.md  inspect_dll.py  prototipo_ocr.py
ER296/Er296ComBridge/: IdrsOcrComService.cs
ER296/Er296ComBridge.Tests/: IdrsOcrComServiceTests.cs
ER296/integration-demo/: Program.cs
api/: auth.py  main.py  models.py
api/routes/: batch.py  jobs.py  process.py
benchmarks/: README.md  benchmark.py
core/: __init__.py  batch_processor.py  corrector.py  engine.py  er296_engine.py  idrs15_engine.py  optimizer.py  pipeline.py  table_parser.py
dashboard/: index.html
iDRS15/: extract_strings.py  inspect_dll.py  prototipo_ocr.py  selected_exports.py
iDRS15/IdrsComBridge/: IdrsComBridge.csproj  IdrsOcrComService.cs
iDRS15/IdrsComBridge.Tests/: IdrsComBridge.Tests.csproj
iDRS15/integration-demo/: IdrsNativeWrapper.cs
iDRS15/native-wrapper/: README.md
iDRS15/native-wrapper/sample/: README.md  sample.txt
roa_ocr/: __init__.py  cli.py  config.py
roa_ocr/ER296/: ARQUITECTURA_ER296.md  GUIA_INTEGRACION_ER296.md  exports_summary.py  extract_strings.py
roa_ocr/ER296/Er296ComBridge/: IdrsComBridge.csproj
roa_ocr/ER296/OCRResources/: let.res
roa_ocr/ER296/native-wrapper/: CMakeLists.txt  main.cpp
roa_ocr/api/: auth.py  main.py
roa_ocr/api/routes/: batch.py  jobs.py  process.py
roa_ocr/core/: __init__.py  batch_processor.py  corrector.py  engine.py  er296_engine.py  format_converter.py  pipeline.py  rag_chunker.py  table_parser.py
roa_ocr/dashboard/: index.html
roa_ocr/integrations/: __init__.py  langchain_loader.py  llamaindex_reader.py  mcp_server.py
roa_ocr/worker/: tasks.py
tests/: test_basic.py
worker/: tasks.py
